# DrFujiBot

./: .gitignore  .gitmodules  README.md  build_release.bat  release_checklist.txt  requirements.txt
DrFujiBot_Django/: .gitignore  manage.py  pyproject.toml  requirements.txt
DrFujiBot_Django/.ebextensions/: db-migrate.config  django.config
DrFujiBot_Django/DrFujiBot_Django/: asgi.py  router.py  settings.py  urls.py  wsgi.py
DrFujiBot_Django/backup_task/: backup_task.py
DrFujiBot_Django/dashboard/: admin.py  admin_commands.py  apps.py  coin_commands.py  lookup_commands.py  lookup_helpers.py  models.py  signals.py  test_permissions.py  urls.py  utility.py  views.py
DrFujiBot_Django/dashboard/migrations/: 0001_initial.py  0002_create_lookup_commands.py  0003_setting.py  0004_default_settings.py  0005_timedmessage.py  0006_create_admin_commands.py  0007_death_run.py  0008_default_run.py  0009_quote.py  0010_chatlog.py  0011_bannedphrase.py  0012_death_attempt.py  0013_uptime_command.py  0014_coinentry.py  0015_coin_commands.py  0016_bet_bettingevent.py  0017_timedmessage_stream_status.py  0018_listruns_command.py  0019_set_default_game_gen_8.py  0020_shoutout_command.py  0021_debug_command.py  0022_stats_commands.py  0025_song_command.py  (+10 more)
DrFujiBot_Django/data/: access_token.txt  afflictions.json
DrFujiBot_Django/scheduled_tasks/: backup_task.py  banned_phrase_expiry.py  chat_history.py  coins.py  irc_monitor.py  uptime_check.py
DrFujiBot_IRC/: Dockerfile  build_image.sh  drfujibot_irc.py  export_requirements.sh  pyproject.toml  requirements.txt  run_irc.sh
(+43 files in other folders)
