[tool.poetry]
name = "drfujibot_django"
version = "0.1.0"
description = ""
authors = ["EverOddish <everoddish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
requests = "^2.28.1"
pyspellchecker = "^0.7.0"
APScheduler = "^3.9.1"
certifi = "^2022.9.24"
cffi = "^1.15.1"
pycparser = "^2.21"
cryptography = "^38.0.3"
iso8601 = "^1.1.0"
PyJWT = "^2.6.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
