[tool.poetry]
name = "drfujibot_irc"
version = "0.1.0"
description = ""
authors = ["EverOddish <everoddish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
irc = "^20.1.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
